# base-jupyter-project

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-check.yml
base_jupyter_project/: main.ipynb
